# myturtle

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  logger.py  main.py  pyproject.toml  readme.md
.github/workflows/: release-build.yaml
channel/: dingding.py  feishu.py  wechat.py
kube/: deployment.yaml
